deployments/monitoring/grafana/05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: web
